--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
   .kpi { display:flex; gap:10px; margin-top:10px; }
   .kpi>div { flex:1 1 0; background:#101520; border:1px solid #222; border-radius:10px; padding:10px; text-align:center; }
   .muted { color:#9aa3b2; font-size:12px; }
-  .warn { color:#ffb84d; }
-  .ok { color:#5ad08c; }
 </style>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.18.0/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
@@ -33,21 +31,12 @@
     <label>Ad URL (MP4 — HTTPS or repo path like <code>ads/my_ad.mp4</code>)</label>
     <input id="adUrl" type="text" placeholder="ads/my_ad.mp4" />
 
-    <div class="row" style="gap:10px;">
-      <div class="panel" style="flex:1 1 260px;">
-        <b>Brand moment windows (seconds: start,end)</b>
-        <label>Logo</label> <input id="logoWin" type="text" value="5,7.5" />
-        <label>Packshot</label> <input id="packWin" type="text" value="10,12" />
-        <label>CTA</label> <input id="ctaWin" type="text" value="18,21" />
-        <div class="muted" style="margin-top:6px;">Rough timings are fine; refine later.</div>
-      </div>
-      <div class="panel" style="flex:1 1 260px;">
-        <b>Optional rough gaze ROIs (x,y,w,h in 0..1)</b>
-        <label>Logo ROI</label> <input id="logoRoi" type="text" value="0.78,0.08,0.18,0.12" />
-        <label>Pack ROI</label> <input id="packRoi" type="text" value="0.65,0.30,0.30,0.40" />
-        <label>CTA ROI</label> <input id="ctaRoi" type="text" value="0.72,0.80,0.22,0.14" />
-        <div class="muted">Uses head yaw/pitch as a rough proxy.</div>
-      </div>
+    <div class="panel" style="margin-top:10px;">
+      <b>Brand moment windows (seconds: start,end)</b>
+      <label>Logo</label> <input id="logoWin" type="text" value="5,7.5" />
+      <label>Packshot</label> <input id="packWin" type="text" value="10,12" />
+      <label>CTA</label> <input id="ctaWin" type="text" value="18,21" />
+      <div class="muted" style="margin-top:6px;">Rough timings are fine; refine later.</div>
     </div>
 
     <div class="btns">
@@ -78,18 +67,35 @@
   </div>
 
   <div class="panel" style="flex:1 1 320px;">
-    <b>Tips</b>
+    <b>How it works</b>
     <ul class="muted">
-      <li>When webcam starts, you should see your face video on the right.</li>
-      <li>Keep your face lit and centered; remove glasses for a first test.</li>
-      <li>If the ad is paused or not playing, sampling pauses too.</li>
+      <li>Samples webcam ~6–7 Hz while the ad plays.</li>
+      <li>Computes attention (eyes open), valence (happy vs negative), arousal (activation), head jitter.</li>
+      <li>Compares response vs baseline around Logo/Pack/CTA windows.</li>
+      <li>Outputs PR / AWR / PI (0–100) + CSV/JSON.</li>
     </ul>
   </div>
 </div>
 
+<!-- ===== Diagnostics + Model Loader (robust for GitHub Pages subpath) ===== -->
+<script>
+  // Adjust this to your repo name (with leading/trailing slashes)
+  const REPO_SUBPATH = '/Emotion-Ai-/';
+  const onGhPages = location.hostname.endsWith('github.io') && location.pathname.startsWith(REPO_SUBPATH);
+  const MODEL_URL = onGhPages ? REPO_SUBPATH + 'models' : './models';
+
+  const log = (...args) => { console.log(...args); const s=document.getElementById('status'); if(s){ s.textContent = args.join(' ');} };
+  async function probeModel(url, file) {
+    const full = `${url.replace(/\/$/,'')}/${file}`;
+    log('Probing', full, '…');
+    const r = await fetch(full, { cache: 'no-store' });
+    if (!r.ok) throw new Error(`Probe failed ${r.status} for ${full}`);
+    return full;
+  }
+</script>
+
 <script>
   // ====== Config ======
-  const MODEL_URL = './models';     // loads from your repo's /models folder
   const SAMPLE_MS = 150;            // ~6–7 Hz
   const BASELINE_PRE = [2.0, 0.5];  // baseline window [te-2.0, te-0.5]
   const RESP_DUR = 2.0;             // response window [te, te+2.0]
@@ -110,11 +116,8 @@
   const mean=a=>a.length?a.reduce((x,y)=>x+y,0)/a.length:0;
   const peak=a=>a.length?Math.max(...a):0;
   const stdev=a=>{ if(!a.length) return 0; const m=mean(a); return Math.sqrt(a.reduce((s,x)=>s+(x-m)*(x-m),0)/a.length); };
-  const norm01=(x,min,max)=> max>min?clamp((x-min)/(max-min),0,1):0;
   const sigmoid=x=>1/(1+Math.exp(-x));
   const parsePair = s => { const [a,b]=(s||'').split(',').map(Number); return [Number(a||0),Number(b||0)]; }
-  const parseQuad = s => { const [x,y,w,h]=(s||'').split(',').map(Number); return {x:x||0,y:y||0,w:w||0,h:h||0}; }
-  const inBox=(x,y,b)=> x>=b.x && x<=b.x+b.w && y>=b.y && y<=b.y+b.h;
 
   // ====== Face feature helpers ======
   function eyeAspectRatio(p, ids){
@@ -134,4 +137,237 @@
     const pitch= clamp((nose.y-cy)/(Math.abs(bottom.y-top.y)+1e-5), -0.6, 0.6);
 
     const gazeX = clamp(0.5 + yaw * -0.9, 0, 1);
-   
+    const gazeY = clamp(0.5 + pitch *  0.9, 0, 1);
+
+    let jitter=0; if (lastNose) jitter=Math.hypot(nose.x-lastNose.x, nose.y-lastNose.y);
+    lastNose = {x:nose.x,y:nose.y};
+
+    return { eyesOpen, gazeX, gazeY, jitter };
+  }
+  function valenceFromExpr(e){
+    const pos = e.happy||0, neg=(e.angry||0)+(e.sad||0)+(e.disgusted||0);
+    return clamp(pos - neg, -1, 1);
+  }
+  function arousalFromExpr(e){
+    const act = (e.surprised||0) + (e.fearful||0) + (e.angry||0) + (e.happy||0)*0.5;
+    return clamp(act, 0, 1);
+  }
+  const attentionScore = eyesOpen => clamp(eyesOpen,0,1);
+
+  // ====== Windows & deltas ======
+  function windowSlice(t0,t1){ return stream.filter(r=>r.t>=t0 && r.t<t1); }
+  function windowStats(t0,t1,key){
+    const rows = windowSlice(t0,t1);
+    const arr = rows.map(r=>r[key]);
+    const m = mean(arr), pk = peak(arr), sd = stdev(arr);
+    return { mean: m, peak: pk, std: sd };
+  }
+  function deltaFeature(te, key){
+    const base0 = te - BASELINE_PRE[0], base1 = te - BASELINE_PRE[1];
+    const base = windowStats(base0, base1, key);
+    const resp = windowStats(te, te + RESP_DUR, key);
+    return { dMean: resp.mean - base.mean, dPeak: resp.peak - base.peak, base, resp };
+  }
+
+  // ====== KPI scoring (ROI-free) ======
+  function engagementIndexSimple(t0, dur){
+    const eyes = windowStats(t0, t0+dur, 'att').mean;
+    const jit = stdev(windowSlice(t0, t0+dur).map(r=>r.jitter));
+    // higher is better: eyes; lower is better: jitter
+    const jitterN = Math.max(0, 1 - (jit/2.0)); // simple normalization
+    return 0.7*eyes + 0.3*jitterN;
+  }
+  function computeKPIs(winLogo, winPack, winCTA){
+    const tLogo = winLogo[0], tPack = winPack[0], tCTA = winCTA[0];
+
+    const dV_logo = deltaFeature(tLogo, 'val');
+    const dV_pack = deltaFeature(tPack, 'val');
+    const smile_logo_peak = windowStats(tLogo, tLogo+RESP_DUR, 'pos').peak;
+    const neg_logo_peak   = windowStats(tLogo, tLogo+RESP_DUR, 'neg').peak;
+
+    // global baseline for z-like scaling
+    const baseAll = windowStats(0, Math.max(0.1, tLogo), 'val');
+    const z = (x, m=baseAll.mean, s=0.25)=> s>1e-6 ? (x-m)/s : 0;
+
+    // PR: remove gaze term
+    const PR = 100/(1+Math.exp(-(
+      0.95*z(dV_logo.dMean) +
+      0.55*z(dV_pack.dMean) +
+      0.45*z(smile_logo_peak, 0.15, 0.2) -
+      0.45*z(neg_logo_peak, 0.1, 0.2)
+    )));
+
+    // AWR: use arousal delta at logo only (no dwell/latency)
+    const dA_logo = deltaFeature(tLogo, 'aro').dMean;
+    const AWR = 100/(1+Math.exp(-( 0.9*z(dA_logo) )));
+
+    // PI: engagement via eyes + jitter only (no CTA dwell)
+    const wCTA = windowStats(tCTA, tCTA+Math.max(2.5, RESP_DUR), 'val');
+    const v_cta = wCTA.mean;
+    const v_cta_pk = wCTA.peak;
+    const eng_cta = engagementIndexSimple(tCTA, Math.max(2.5, RESP_DUR));
+    const neg_cta = windowStats(tCTA, tCTA+Math.max(2.5, RESP_DUR), 'neg').peak;
+
+    const PI = 100/(1+Math.exp(-(
+      0.85*z(v_cta,  0, 0.3) +
+      0.55*z(eng_cta, 0.3, 0.25) +
+      0.35*z(v_cta_pk,0.15,0.2) -
+      0.55*z(neg_cta, 0.1, 0.2)
+    )));
+
+    return { PR:+PR.toFixed(1), AWR:+AWR.toFixed(1), PI:+PI.toFixed(1) };
+  }
+
+  // ====== CSV/JSON export ======
+  function toCSV(rows){
+    const header = ['t','att','val','aro','pos','neg','gazeX','gazeY','jitter','face'];
+    const lines = [header.join(',')];
+    rows.forEach(r => lines.push([r.t,r.att,r.val,r.aro,r.pos,r.neg,r.gazeX,r.gazeY,r.jitter,r.face].map(x=>typeof x==='number'?x.toFixed(4):x).join(',')));
+    return lines.join('\n');
+  }
+  function download(name, text, type='text/plain'){
+    const blob = new Blob([text], {type});
+    const a = document.createElement('a');
+    a.href = URL.createObjectURL(blob); a.download = name; a.click();
+    URL.revokeObjectURL(a.href);
+  }
+
+  // ====== Load models with probe ======
+  document.getElementById('btnLoadModels').addEventListener('click', async () => {
+    try {
+      log('Checking model path…');
+      await probeModel(MODEL_URL, 'tiny_face_detector_model-weights_manifest.json');
+      log('Loading TinyFaceDetector…');
+      await faceapi.nets.tinyFaceDetector.loadFromUri(MODEL_URL);
+
+      log('Loading FaceLandmark68…');
+      await faceapi.nets.faceLandmark68Net.loadFromUri(MODEL_URL);
+
+      log('Loading FaceExpression…');
+      await faceapi.nets.faceExpressionNet.loadFromUri(MODEL_URL);
+
+      log('Models loaded ✔  Start webcam next.');
+      document.getElementById('btnCam').disabled = false;
+    } catch (e) {
+      console.error('Model load error:', e);
+      alert(`Model load FAILED:\n${e.message}\nOpen DevTools → Console for the exact URL.`);
+      const s=document.getElementById('status');
+      if (s) s.textContent = 'Model load FAILED. See console for URL.';
+    }
+  });
+
+  // ====== Start webcam (wait for metadata so sizes are valid) ======
+  document.getElementById('btnCam').addEventListener('click', async () => {
+    try{
+      const st = await navigator.mediaDevices.getUserMedia({ video:{facingMode:'user', width:{ideal:640}, height:{ideal:480}}, audio:false });
+      cam.srcObject = st;
+      cam.addEventListener('loadedmetadata', () => {
+        cam.play();
+        canv.width = cam.videoWidth || 640;
+        canv.height = cam.videoHeight || 480;
+        webcamReady = true;
+        log(`Webcam ready ${canv.width}x${canv.height}. Enter Ad URL and press Play & analyze.`);
+        document.getElementById('btnPlay').disabled = false;
+      }, { once:true });
+    }catch(e){
+      log('Camera error:', e.message);
+    }
+  });
+
+  // ====== Sampling loop ======
+  async function sampleOnce(){
+    try{
+      if (!webcamReady || !cam.videoWidth) return;
+      const tNow = isFinite(ad.currentTime) ? +ad.currentTime.toFixed(3) : 0;
+
+      const det = await faceapi
+        .detectSingleFace(cam, new faceapi.TinyFaceDetectorOptions({inputSize:320, scoreThreshold:0.3}))
+        .withFaceLandmarks().withFaceExpressions();
+
+      ctx.clearRect(0,0,canv.width,canv.height);
+
+      if (det){
+        const res = faceapi.resizeResults(det, { width: canv.width, height: canv.height });
+        faceapi.draw.drawDetections(canv, res);
+        faceapi.draw.drawFaceLandmarks(canv, res);
+
+        const feats = featuresFromLandmarks(det);
+        const e = det.expressions || {};
+        const att = attentionScore(feats.eyesOpen);
+        const val = valenceFromExpr(e);
+        const aro = arousalFromExpr(e);
+        const pos = (e.happy||0);
+        const neg = (e.angry||0)+(e.sad||0)+(e.disgusted||0);
+
+        stream.push({ t:tNow, att, val, aro, pos, neg, gazeX:feats.gazeX, gazeY:feats.gazeY, jitter:feats.jitter, face:1 });
+      } else {
+        stream.push({ t:tNow, att:0, val:0, aro:0, pos:0, neg:0, gazeX:0.5, gazeY:0.5, jitter:0, face:0 });
+      }
+
+      // FPS + sample counter
+      framesCount++; const now = performance.now();
+      if (now - fpsT0 > 1000){ fpsEl.textContent = framesCount + ' fps'; framesCount=0; fpsT0 = now; }
+      statusEl.textContent = `Recording… samples: ${stream.length}`;
+    }catch(e){
+      console.debug('sampleOnce error', e);
+    }
+  }
+  function startSampling(){ stream.length = 0; lastNose = null; if (!samplingTimer) samplingTimer = setInterval(sampleOnce, SAMPLE_MS); }
+  function stopSampling(){ if (samplingTimer) clearInterval(samplingTimer); samplingTimer = null; }
+
+  // ====== Play & Analyze with fallbacks ======
+  document.getElementById('btnPlay').addEventListener('click', async () => {
+    const url = document.getElementById('adUrl').value.trim();
+    if (!url){ log('Enter a valid Ad URL (e.g., ads/my_ad.mp4)'); return; }
+
+    ad.src = url;
+
+    // start sampling immediately; will use t=0 until playing
+    startSampling();
+
+    ad.onplaying = () => { startSampling(); log('Recording…'); };
+    ad.onpause   = () => { log('Paused'); };
+    ad.onended   = () => { stopSampling(); log('Analyzing…'); analyzeAndShow(); };
+
+    try { await ad.play(); }
+    catch(e) { log('Click the video to start playback (autoplay blocked)'); }
+
+    // watchdog kick
+    setTimeout(() => {
+      if (stream.length === 0) { startSampling(); log('Recording…'); }
+    }, 1500);
+  });
+
+  function analyzeAndShow(){
+    if (!stream.length){ log('No samples captured.'); return; }
+
+    const [logoS, logoE] = parsePair(document.getElementById('logoWin').value);
+    const [packS, packE] = parsePair(document.getElementById('packWin').value);
+    const [ctaS,  ctaE ] = parsePair(document.getElementById('ctaWin').value);
+
+    const KPIs = computeKPIs([logoS,logoE],[packS,packE],[ctaS,ctaE]);
+    document.getElementById('kPR').textContent  = KPIs.PR.toString();
+    document.getElementById('kAWR').textContent = KPIs.AWR.toString();
+    document.getElementById('kPI').textContent  = KPIs.PI.toString();
+
+    log('Done. Export results below.');
+    document.getElementById('btnCSV').disabled = false;
+    document.getElementById('btnJSON').disabled = false;
+  }
+
+  // Exports
+  document.getElementById('btnCSV').addEventListener('click', () => {
+    const csv = toCSV(stream);
+    download(`frames_${Date.now()}.csv`, csv, 'text/csv');
+  });
+  document.getElementById('btnJSON').addEventListener('click', () => {
+    const [logoS, logoE] = parsePair(document.getElementById('logoWin').value);
+    const [packS, packE] = parsePair(document.getElementById('packWin').value);
+    const [ctaS,  ctaE ] = parsePair(document.getElementById('ctaWin').value);
+    const KPIs = computeKPIs([logoS,logoE],[packS,packE],[ctaS,ctaE]);
+    const out = { meta:{ ts:Date.now(), ad:document.getElementById('adUrl').value }, kpi: KPIs, frames: stream };
+    download(`report_${Date.now()}.json`, JSON.stringify(out,null,2), 'application/json');
+  });
+</script>
+</body>
+</html>
